# poker-planning

./: README.md  spec.yaml
.github/workflows/: deploy-client.yml  deploy-server.yml
client/: .eslintrc.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client/public/: 404.html
client/src/: routeTree.gen.ts
client/src/components/ConfirmationDialog/: confirmationDialog.test.tsx
client/src/components/Player/: index.tsx
client/src/components/Room/: index.tsx
client/src/components/Table/: index.tsx
client/src/components/footer/: index.tsx
client/src/components/ui/: card.tsx  chart.tsx  toast.tsx
client/src/components/vote-distribution-chart/: index.tsx
client/src/hooks/: useKeyboardControls.ts
client/src/pages/HomePage/: index.tsx
client/src/pages/NotFoundPage/: index.tsx
client/src/settings/: apiUrls.ts
server/: Cargo.toml
server/src/domain/: deck.rs
