[package]
name = "poker-planning"
version = "0.1.0"
authors = ["INQTR <ivanchenko.b@gmail.com>"]
homepage = "https://pokerplanning.org/"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.10"

config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6"

async-graphql = { version = "7.0.15", features = ["apollo_tracing", "uuid"] }
async-graphql-actix-web = "7.0.15"

env_logger = "0.11"

futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
futures-timer = "3.0"
async-stream = "0.3"

slab = "0.4"
once_cell = "1.21"

uuid = { version = "1", features = ["v4", "serde"] }
actix-cors = "0.7"
